Correction to lnLambda in formulary2

--- a/1d_cpp/source/makefile
+++ b/1d_cpp/source/makefile
@@ -3,14 +3,14 @@
 # Makefile for OSHUN
 # This should work with gcc-6, open-mpi compiled with gcc-6, and HDF5 compiled with c++11 standards
 
-COMPILER = mpicxx
+COMPILER = mpicxx.openmpi
 
 # GNU compilers#
 OPTFLAGS = -O2 -std=c++0x -ftree-vectorize
 DBGFLAGS = -v -g -O0 -Wall -pedantic -std=c++0x
 
 # HDF5 libraries
-H5LIB =  -L/usr/local/lib -I/usr/local/include -lhdf5_cpp -lhdf5 
+H5LIB =  -L/usr/lib/openmpi/lib -L/usr/local/lib -I/usr/local/include -lhdf5_cpp -lhdf5 -lmpi 
 
 # INTEL compilers
 #OPTFLAGS = -O3
@@ -31,8 +31,8 @@ BUILDOBJECTS = ${addprefix ${TMP_DIR}/,${OBJECTS}}
 BUILDEXEC = ${addprefix ${EXEC_DIR}/,${EXEC}}
 
 ${BUILDEXEC} : ${BUILDOBJECTS}
-	-${COMPILER} ${OPTFLAGS} -o ${BUILDEXEC} $(H5LIB) \
-	${BUILDOBJECTS} 
+	-${COMPILER} ${OPTFLAGS} -o ${BUILDEXEC} \
+	${BUILDOBJECTS} $(H5LIB) 
 
 clean ::
 	rm -f ${BUILDOBJECTS}
@@ -40,8 +40,8 @@ clean ::
 	rm -f ${TMP_DIR}/${BUILDOBJECTS}
 
 debug :
-	${COMPILER} ${DBGFLAGS} -o ${BUILDEXEC} $(H5LIB)\
-	%.cpp
+	${COMPILER} ${DBGFLAGS} -o ${BUILDEXEC} \
+	${BUILDOBJECTS} $(H5LIB)
 
 ./tmp/%.o: %.cpp
 	$(COMPILER) $(OPTFLAGS) -c -o $@ $<
